nais/service_entry.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  labels:
    team: medlemskap
    app: medlemskap-oppslag-funksjonelle-tester
  name: medlemskap-oppslag-funksjonelle-tester
  namespace: medlemskap
spec:
  exportTo:
    - .
  hosts:
    - aadcdn.msauth.net
    - aadcdn.msauthimages.net
    - aadcdn.msftauth.net
    - device.login.microsoftonline.com
    - login.live.com
    - login.microsoftonline.com
    - www.office.com
    - api-gw-q1.oera.no
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
