nais/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    team: medlemskap
    app: medlemskap-oppslag-funksjonelle-tester
  name: medlemskap-oppslag-funksjonelle-tester
  namespace: medlemskap
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              istio: istiod
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              istio: pilot
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              istio: mixer
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              istio: ingressgateway
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.6.0.0/15
              - 172.16.0.0/12
              - 192.168.0.0/16
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              app: prometheus
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              istio: ingressgateway
  podSelector:
    matchLabels:
      app: medlemskap-oppslag-funksjonelle-tester
  policyTypes:
    - Ingress
    - Egress
